# cairn

./: Cargo.toml  README.md
ast-grep-outline/: Cargo.toml
ast-grep-outline/src/: lib.rs  model.rs
cairn-analytics/: Cargo.toml
cairn-analytics/src/: backfill.rs  cost.rs  economics.rs  pricing.rs  queries.rs  roles.rs  tests.rs  tokens.rs  tool_extract.rs  tools.rs  types.rs
cairn-cmd/: Cargo.toml  LICENSE
cairn-cmd/src/: cli.rs  executor.rs  main.rs  output.rs  resolve.rs  schemas.rs  server.rs  test_support.rs  timeouts.rs  warm_search_shim.rs
cairn-cmd/tests/: warm_search_shim.rs
cairn-codec/: Cargo.toml
cairn-codec/src/: codec.rs  diff.rs  lib.rs  objects.rs  packfile.rs  testutil.rs  transfer.rs
cairn-common/: Cargo.toml  LICENSE
cairn-common/src/: auth.rs  build_identity.rs  change_validation.rs  contract.rs  executor_protocol.rs  ids.rs  lib.rs  logging.rs  maintenance.rs  memory.rs  paths.rs  protocol.rs  query.rs  read.rs  uri.rs
cairn-common/src/contract/: globals.rs  issues.rs  jobs.rs  mod.rs  nodes.rs  projects.rs  registry.rs  specs.rs  tasks.rs  types.rs  workspace.rs
cairn-common/src/uri/: accessors.rs  build.rs  mod.rs  parse.rs  tests.rs  types.rs
cairn-core/: Cargo.toml  LICENSE
cairn-core/examples/: backfill_embeddings.rs  backfill_resource_embeddings.rs  compute_vibe_axes.rs  concurrent_db_probe.rs  db_lock_probe.rs  dump_event_sizes.rs  vacuum_reclaim.rs  vibe_corpus_dump.rs
cairn-core/src/: agents.rs  api.rs  browser_network.rs  browsers.rs  clock.rs  db.rs  debug.rs  diff.rs  dispatch.rs  env.rs  error.rs  image_cache.rs  internal.rs  lib.rs  managed_worktrees.rs  markdown_frontmatter.rs  node_segments.rs  notify.rs  output_schemas.rs  repl_host.rs  schema.rs  schemas.rs  scratch.rs  search.rs  skills.rs  snapshot.rs  system_prompt.rs  team_remote_intents.rs  terminal_host.rs  test_utils.rs  tools.rs  transcripts.rs  worktree_search_parity.rs
cairn-core/src/account/: anon_device.rs  connection.rs  content_store.rs  executor_enrollment.rs  jwt.rs  manager.rs  mod.rs  org_tokens.rs  queries.rs  team_sync.rs  team_token_minter.rs
cairn-core/src/action_configs/: mod.rs  queries.rs
cairn-core/src/action_runs/: queries.rs
cairn-core/src/agent_process/: args.rs  claude_system_prompt.md  codex_system_prompt.md  default_workspace_prompt.md  gc.rs  memory.rs  mod.rs  process.rs  stdin.rs  stream.rs  system_prompt.md  toolkits.rs  turn_boundary.rs  version_control_ambient.md  version_control_authoring.md
cairn-core/src/analytics/: backfill.rs  cost.rs  economics.rs  mod.rs  pricing.rs  queries.rs  tests.rs  tokens.rs  tool_extract.rs  tools.rs  types.rs
cairn-core/src/archival/: backfill.rs  diff.rs  encoding.rs  event_fixture.rs  mod.rs  objects.rs  packfile.rs  reconstruct.rs  rewrite.rs  store.rs  testutil.rs
cairn-core/src/artifacts/: annotations.rs  mod.rs  queries.rs
cairn-core/src/backends/: claude.rs  claude_usage.rs  codex.rs  context_window.rs  mod.rs  run_state.rs  stdin.rs  workflow.rs
cairn-core/src/build_slots/: mod.rs
cairn-core/src/chats/: queries.rs
cairn-core/src/claude/: args.rs  checkpoints.rs  gc.rs  mod.rs  process.rs  stdin.rs  stream.rs  system_prompt.md  toolkits.rs  turn_boundary.rs
cairn-core/src/condition/: mod.rs
cairn-core/src/config/: agents.rs  build_services.rs  check_exemption.rs  contextual_packages.rs  dev_commands.rs  keybinds.rs  language_servers.rs  mcp_import.rs  mcp_servers.rs  mcp_setup.rs  mcp_tools.rs  mod.rs  pdf.rs  presets.rs  project_settings.rs  provider_options.rs  recipes.rs  secrets.rs  settings.rs  skill_archive.rs  skill_fetch.rs  skills.rs  snapshot_migrate.rs  tools.rs  web_fetch.rs  web_search.rs  web_services.rs  workflows.rs  yaml_edit.rs
cairn-core/src/config_disables/: mod.rs  queries.rs
cairn-core/src/db_records/: accumulator.rs  action.rs  cache.rs  docs.rs  embedding.rs  github.rs  issue.rs  job.rs  memory.rs  merge_request.rs  mod.rs  project.rs  run.rs  session.rs  session_skyline_cache.rs  trigger_source.rs  turn.rs
cairn-core/src/deployment/: docker.rs  mod.rs  models.rs  queries.rs  ssh.rs
cairn-core/src/diesel_models/: accumulator.rs  action.rs  artifact.rs  cache.rs  chat.rs  comment.rs  docs.rs  effect_outbox.rs  embedding.rs  execution.rs  file_change.rs  github.rs  issue.rs  job.rs  manager.rs  manager_mailbox.rs  manager_scope.rs  manager_wake_batch.rs  memory.rs  merge_request.rs  message.rs  message_stream.rs  mod.rs  permission.rs  pr.rs  project.rs  prompt.rs  recipe.rs  run.rs  session.rs  terminal.rs  todo.rs  trigger_source.rs  turn.rs  workspace.rs
cairn-core/src/docs/: mod.rs
cairn-core/src/effects/: checkpoint.rs  dag.rs  executor.rs  mod.rs  outbox.rs  reduce.rs  run.rs  types.rs
cairn-core/src/embeddings/: client.rs  engine.rs  mod.rs  position.rs  queries.rs  resource_text.rs  vector.rs  vibe_axes.json  vibes.rs  worker.rs
cairn-core/src/execution/: accumulator.rs  actions.rs  cache.rs  (+28 more)
cairn-core/tests/: account.rs  accumulator.rs  action_runs.rs  artifact_seen.rs  condition.rs  config_override.rs  config_scope.rs  ctx_self_lifecycle.rs  effects_checkpoint.rs  effects_checkpoint_loop.rs  embeddings_db.rs  execution_job_creation.rs  execution_lock.rs  flail_dedup.rs  github_credentials.rs  issue_outcome.rs  issue_status_resolution.rs  issues.rs  job_continue_recovery.rs  lifecycle_stop.rs  lsp_real_servers.rs  mcp_change_parity.rs  mcp_config_resources.rs  mcp_file_changes.rs  mcp_issue_resources.rs  mcp_node_permission_answer.rs  mcp_node_question_answer.rs  mcp_openrouter_suspend.rs  mcp_pr_action_dispatch.rs  mcp_registry_fence.rs  mcp_run_commit_hygiene.rs  mcp_run_execution.rs  mcp_skill_resources.rs  memories.rs  memories_db.rs  memories_integration.rs  pr_actions.rs  project_prs.rs  projects.rs  prompt_resume_event.rs  (+14 more)
cairn-db/: Cargo.toml
cairn-db/src/: lib.rs
cairn-mcp/: Cargo.toml  LICENSE
cairn-mcp/src/: main.rs
cairn-symbols/: Cargo.toml
cairn-symbols/src/: lib.rs  search_util.rs
cairn-vcs/: Cargo.toml
cairn-vcs/src/: lib.rs
cairn-worktree/: Cargo.toml
cairn-worktree/src/: lib.rs
(+629 files in other folders)
