# Vendored from ast-grep-outline 0.43.0 (MIT). The published ast-grep crates
# are on crates.io, but the outline crate is not, so the part Cairn uses — the
# serializable outline `model` — lives here. The model is self-contained (serde
# only); extraction is driven from cairn-core's grammar tables. See src/lib.rs.
[package]
name = "ast-grep-outline"
version = "0.43.0"
description = "Code outline model for ast-grep (vendored model subset)"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
