[package]
name = "cairn-common"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for Cairn agent orchestration"
license = "BUSL-1.1"
repository = "https://github.com/bleugreenlab/cairn"
homepage = "https://cairn.computer"
keywords = ["agent", "orchestration", "mcp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
