[package]
name = "cairn-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic library for Cairn agent orchestration — no Tauri dependency"
license = "BUSL-1.1"
repository = "https://github.com/bleugreenlab/cairn"
homepage = "https://cairn.computer"
keywords = ["agent", "orchestration", "mcp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1"
evalexpr = "11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["time", "rt", "macros", "sync", "net", "process"] }
portable-pty = "0.8"
log = "0.4"
nix = { version = "0.29", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
serde_yaml = "0.9"
toml = "0.8"
json5 = "0.4"
base64 = "0.22"
rand = "0.8"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hostname = "0.4"
whoami = "1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"
cairn-common = { path = "../cairn-common" }
ignore = "0.4"
globset = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
tempfile = "3"
crossbeam-channel = "0.5"
zip = "4.2"
turso = { git = "https://github.com/tursodatabase/turso", rev = "96781e3d007a9d4d0d74f99b29ea8543482d994d", default-features = false }
tantivy = "0.26.1"
jsonschema = { version = "0.26", default-features = false }
tiktoken-rs = "0.6"
# In-process structural code intelligence (tree-sitter via ast-grep). Replaces
# the external Language Server adapter: parses on demand, ships ~25 grammars
# compiled in (no install, no per-worktree server/index). `ast-grep-language`
# default `builtin-parser` feature compiles every bundled grammar.
ast-grep-core = "0.43"
ast-grep-language = "0.43"
ast-grep-config = "0.43"
ast-grep-outline = { path = "../ast-grep-outline" }

# Optional: test utilities (mocking)
mockall = { version = "0.13", optional = true }
jsonwebtoken = "9.3.1"
zstd = "0.13"
# Session archival object access (CAIRN-1538). Focused gix crates only — not the
# umbrella `gix` — to read range packs and the repo ODB in-process. gix-features
# is pulled directly for its `zlib::Inflate`, required by gix-pack's entry decoder.
gix-pack = { version = "0.71", features = ["sha1"] }
gix-object = { version = "0.61", features = ["sha1"] }
gix-hash = { version = "0.25", features = ["sha1"] }
gix-odb = { version = "0.81.0", features = ["sha1"] }
gix-features = { version = "0.48", features = ["zlib"] }
lsp-types = "0.97"
# HTML→markdown for the built-in "regular" web-fetch provider. A turndown.js
# inspired pure-Rust converter; only `text/html` responses are converted, JSON
# and text/markdown pass through unchanged.
htmd = "0.5"

# OS keychain access for MCP server secrets. Backend is selected per target so a
# Finder-launched app (minimal process env) still resolves token-bearing
# servers. Declared per-target to avoid pulling secret-service/dbus deps into
# the macOS/Windows builds.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Linux: keyring (secret-service) for MCP secrets + landlock for the OS-level
# worktree-fence sandbox (origin/main).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
landlock = "0.4"

[dev-dependencies]
filetime = "0.2"
mockall = "0.13"
serde_json = "1.0"
tempfile = "3"
cairn-core = { path = ".", features = ["test-utils"] }

[features]
internal-api = []
test-utils = ["dep:mockall", "internal-api"]

[[example]]
name = "compute_vibe_axes"
required-features = ["internal-api"]

[[example]]
name = "vibe_corpus_dump"
required-features = ["internal-api"]

[[example]]
name = "backfill_resource_embeddings"
required-features = ["internal-api"]

[[example]]
name = "concurrent_db_probe"
required-features = ["internal-api"]

[[example]]
name = "vacuum_reclaim"
required-features = ["internal-api"]

[[example]]
name = "db_lock_probe"
required-features = ["internal-api"]
