[package]
name = "cairn-core"
version.workspace = true
edition = "2021"
description = "Core business logic library for Cairn agent orchestration — no Tauri dependency"
license = "BUSL-1.1"
repository = "https://github.com/bleugreenlab/cairn"
homepage = "https://cairn.computer"
keywords = ["agent", "orchestration", "mcp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1"
evalexpr = "11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["time", "rt", "macros", "sync", "net", "process"] }
portable-pty = "0.8"
log = "0.4"
nix = { version = "0.29", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
serde_yaml = "0.9"
toml = "0.8"
json5 = "0.4"
base64 = "0.22"
rand = "0.8"
chacha20poly1305 = "0.10"
crypto_box = "0.9"
sha2 = "0.10"
hostname = "0.4"
whoami = "1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures-util = "0.3"
async-trait = "0.1"
cairn-common = { path = "../cairn-common" }
ignore = "0.4"
globset = "0.4"
reflink-copy = "0.1.30"
grep-regex = "0.1"
grep-searcher = "0.1"
tempfile = "3"
crossbeam-channel = "0.5"
zip = "4.2"
turso = { git = "https://github.com/tursodatabase/turso", rev = "496c24ed85d2a7cf4963f12537e3c539144765a7", default-features = false, features = ["sync"] }
# Direct rustls handle solely so `LocalDb::ensure_crypto_provider` can install a
# process-wide default `CryptoProvider` before turso's sync TLS client is built.
# The tree already compiles rustls with both `aws-lc-rs` and `ring`, which makes
# rustls' feature-based auto-detection ambiguous and panics the first sync
# handshake; we install `aws-lc-rs` (rustls' modern default) explicitly. See the
# doc comment on `ensure_crypto_provider` in storage/local_db.rs.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
tantivy = "0.26.1"
jsonschema = { version = "0.26", default-features = false }
tiktoken-rs = "0.6"
# Structural code intelligence (ast-grep) and the warm fff worktree-search index
# are quarantined behind cairn-symbols so cairn-core no longer compiles the ~25
# tree-sitter grammars or fff-search directly — its two heaviest dependency
# edges. cairn-symbols re-exports what core still needs (`SupportLang`, the
# glob/path/format search helpers); the load-bearing dependency rationale for
# ast-grep and fff-search now lives in that crate's manifest.
cairn-symbols = { path = "../cairn-symbols" }

# The gix + zstd event-codec/object substrate (tagged payload compression, the
# in-memory layered git ObjectStore, range packfile construction, and committed
# diff rendering) is quarantined behind cairn-codec so cairn-core no longer
# compiles gix or zstd directly. Its hex-sha-keyed API keeps gix types out of
# cairn-core entirely; the load-bearing gix rationale now lives in that manifest.
cairn-codec = { path = "../cairn-codec" }

# Optional: test utilities (mocking)
mockall = { version = "0.13", optional = true }
jsonwebtoken = "9.3.1"
lsp-types = "0.97"
# HTML→markdown for the built-in "regular" web-fetch provider. A turndown.js
# inspired pure-Rust converter; only `text/html` responses are converted, JSON
# and text/markdown pass through unchanged.
htmd = "0.5"
pdf-extract = "0.7"

# OS keychain access for MCP server secrets. Backend is selected per target so a
# Finder-launched app (minimal process env) still resolves token-bearing
# servers. Declared per-target to avoid pulling secret-service/dbus deps into
# the macOS/Windows builds.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Linux: keyring (secret-service) for MCP secrets + landlock for the OS-level
# worktree-fence sandbox (origin/main).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
landlock = "0.4"

[dev-dependencies]
async-trait = "0.1"
filetime = "0.2"
mockall = "0.13"
serde_json = "1.0"
serial_test = "3"
tempfile = "3"
cairn-core = { path = ".", features = ["test-utils"] }
cairn-codec = { path = "../cairn-codec", features = ["test-utils"] }

[features]
internal-api = []
test-utils = ["dep:mockall", "internal-api"]

[[example]]
name = "compute_vibe_axes"
required-features = ["internal-api"]

[[example]]
name = "vibe_corpus_dump"
required-features = ["internal-api"]

[[example]]
name = "backfill_resource_embeddings"
required-features = ["internal-api"]

[[example]]
name = "concurrent_db_probe"
required-features = ["internal-api"]

[[example]]
name = "vacuum_reclaim"
required-features = ["internal-api"]

[[example]]
name = "db_lock_probe"
required-features = ["internal-api"]
