[package]
name = "cairn-core"
version.workspace = true
edition = "2021"
description = "Core business logic library for Cairn agent orchestration — no Tauri dependency"
license = "BUSL-1.1"
repository = "https://github.com/bleugreenlab/cairn"
homepage = "https://cairn.computer"
keywords = ["agent", "orchestration", "mcp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1"
evalexpr = "11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["time", "rt", "macros", "sync", "net", "process"] }
portable-pty = "0.8"
log = "0.4"
# Direct tracing dependency: the backend resource sampler (`pressure`) gates on
# `tracing::event_enabled!(target: "profiler", ...)` to stay a no-op while the
# profiler target is off, and instrumented backend work opens `profiler`-target
# spans (the span-duration layer). Everywhere else cairn-core logs via `log`.
tracing = "0.1"
nix = { version = "0.29", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
dirs = "5"
thiserror = "2"
serde_yaml = "0.9"
toml = "0.8"
json5 = "0.4"
base64 = "0.22"
rand = "0.8"
chacha20poly1305 = "0.10"
crypto_box = "0.9"
sha2 = "0.10"
hostname = "0.4"
whoami = "1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures-util = "0.3"
async-trait = "0.1"
cairn-common = { path = "../cairn-common" }
ignore = "0.4"
globset = "0.4"
reflink-copy = "0.1.30"
grep-regex = "0.1"
grep-searcher = "0.1"
tempfile = "3"
crossbeam-channel = "0.5"
zip = "4.2"
jsonschema = { version = "0.26", default-features = false }
tiktoken-rs = "0.6"
# Structural code intelligence (ast-grep) and the warm fff worktree-search index
# are quarantined behind cairn-symbols so cairn-core no longer compiles the ~25
# tree-sitter grammars or fff-search directly — its two heaviest dependency
# edges. cairn-symbols re-exports what core still needs (`SupportLang`, the
# glob/path/format search helpers); the load-bearing dependency rationale for
# ast-grep and fff-search now lives in that crate's manifest.
cairn-symbols = { path = "../cairn-symbols" }

# The gix + zstd event-codec/object substrate (tagged payload compression, the
# in-memory layered git ObjectStore, range packfile construction, and committed
# diff rendering) is quarantined behind cairn-codec so cairn-core no longer
# compiles gix or zstd directly. Its hex-sha-keyed API keeps gix types out of
# cairn-core entirely; the load-bearing gix rationale now lives in that manifest.
cairn-analytics = { path = "../cairn-analytics" }
cairn-codec = { path = "../cairn-codec" }

# The database layer (domain models, table records, and the storage engine with
# its full-text search index) descends into cairn-db; cairn-core re-exports it at
# the original crate paths through a thin storage facade. cairn-db is also the
# sole owner of the turso + rustls edges: cairn-core reaches every `turso::` type
# and the `params!` macro through the `cairn_db::turso` re-export (and its rustls
# crypto-provider install through `storage::install_crypto_provider`), so it no
# longer names either crate in this manifest.
cairn-db = { path = "../cairn-db" }

# Optional: test utilities (mocking)
mockall = { version = "0.13", optional = true }
jsonwebtoken = "9.3.1"
lsp-types = "0.97"
# HTML→markdown for the built-in "regular" web-fetch provider. A turndown.js
# inspired pure-Rust converter; only `text/html` responses are converted, JSON
# and text/markdown pass through unchanged.
htmd = "0.5"
pdf-extract = "0.7"

# OS keychain access for MCP server secrets. Backend is selected per target so a
# Finder-launched app (minimal process env) still resolves token-bearing
# servers. Declared per-target to avoid pulling secret-service/dbus deps into
# the macOS/Windows builds.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_System_SystemInformation"] }

# Linux: keyring (secret-service) for MCP secrets + landlock for the OS-level
# worktree-fence sandbox (origin/main).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
landlock = "0.4"

# Process enumeration for the worktree process reaper (execution::teardown /
# worktree_gc): resolve each pid's cwd to SIGKILL detached process trees rooted
# in a worktree being torn down (macOS: proc_pidinfo(PROC_PIDVNODEPATHINFO) +
# proc_listallpids; Linux: /proc/<pid>/cwd). libproc was evaluated first but its
# pidcwd is hardcoded to error on macOS, so it cannot resolve a cwd on the
# platform this targets; libc is already in the tree transitively via nix.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
async-trait = "0.1"
filetime = "0.2"
mockall = "0.13"
serde_json = "1.0"
serial_test = "3"
tempfile = "3"
cairn-core = { path = ".", features = ["test-utils"] }
cairn-codec = { path = "../cairn-codec", features = ["test-utils"] }
cairn-db = { path = "../cairn-db", features = ["test-utils"] }

[features]
internal-api = []
test-utils = ["dep:mockall", "internal-api", "cairn-db/test-utils"]

[[example]]
name = "compute_vibe_axes"
required-features = ["internal-api"]

[[example]]
name = "vibe_corpus_dump"
required-features = ["internal-api"]

[[example]]
name = "backfill_resource_embeddings"
required-features = ["internal-api"]

[[example]]
name = "concurrent_db_probe"
required-features = ["internal-api"]

[[example]]
name = "vacuum_reclaim"
required-features = ["internal-api"]

[[example]]
name = "db_lock_probe"
required-features = ["internal-api"]
