[package]
name = "cairn-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Cairn agent orchestration"
license = "BUSL-1.1"
repository = "https://github.com/bleugreenlab/cairn"
homepage = "https://cairn.computer"
keywords = ["agent", "orchestration", "mcp"]

[[bin]]
name = "cairn-mcp"
path = "src/main.rs"

[[bin]]
name = "cairn-mcp-ext"
path = "src/bin/cairn-mcp-ext.rs"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
cairn-common = { path = "../cairn-common" }
regex = "1"
htmd = "0.1"
url = "2"
urlencoding = "2"
