[package]
name = "cairn-symbols"
version.workspace = true
edition = "2021"
description = "Structural code intelligence (ast-grep) and warm worktree file-search (fff), quarantined from cairn-core"
license = "BUSL-1.1"
repository = "https://github.com/bleugreenlab/cairn"
homepage = "https://cairn.computer"
keywords = ["agent", "orchestration", "mcp"]

[dependencies]
# Path/glob/format helpers shared by both search engines here and re-exported
# into cairn-core so its ripgrep grep handler filters and formats identically
# (one canonical copy — the warm-vs-cold parity the design rests on depends on
# these being the same functions, never a fork).
globset = "0.4"
ignore = "0.4"
grep-regex = "0.1"
log = "0.4"

# In-process structural code intelligence (tree-sitter via ast-grep). Replaces
# the external Language Server adapter: parses on demand, ships ~25 grammars
# compiled in (no install, no per-worktree server/index). `ast-grep-language`
# default `builtin-parser` feature compiles every bundled grammar.
ast-grep-core = "0.43"
ast-grep-language = "0.43"
ast-grep-outline = { path = "../ast-grep-outline" }

# In-process warm file-search index (CAIRN-2303). Wraps fff-search's resident
# FilePicker so repeated ?grep=/?glob= reads and translated run() rg/grep in a
# worktree hit a warm, watcher-maintained index instead of re-walking the tree
# from scratch. Pinned exact: 0.9.x has no API-stability guarantee and the
# worktree_search wrapper module is the sole consumer of its surface. No
# features: `zlob` needs Zig at build time (the pure-Rust globset fallback is
# fine), frecency/history LMDB stores are disabled at runtime (None paths), and
# the process-wide SIGSEGV handler only installs via fff::log::init_tracing,
# which this crate never calls.
fff-search = { version = "=0.9.6", default-features = false }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
