[package]
name = "cairn-worktree"
version.workspace = true
edition = "2021"
description = "Shared worktree population policy and filesystem primitive"
license = "BUSL-1.1"

[dependencies]
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
