# Standalone fixture crate for the gated real-server LSP test. The empty
# [workspace] table makes this its own workspace root so the parent cairn-core
# workspace never tries to build it; rust-analyzer reads it at test runtime.
[package]
name = "lsp-rust-fixture"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[lib]
path = "src/lib.rs"
